Name:          backendwschat
Version:       0.1.0.0
Build-type:    Simple
Cabal-version: >= 1.24

executable backendwschat
  Hs-source-dirs: src
  Ghc-options:    -Wall
  Main-is:        server.hs
  default-language: Haskell2010

  Build-depends:
    base               >= 4     && < 5,
    text               ,
    --snap-core          ,
    --snap-server        ,
    websockets

