name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , bytestring
               , common
               , dependent-sum
               , frontend
               , obelisk-backend
               , obelisk-route
               , text
               , websockets
               , websockets-snap
  exposed-modules:
    Backend
    Backend.Examples.WebSocketChat.Server
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
