name:                commonwschat2
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.24

library
  ghc-options:         -Wall -O2
  exposed-modules:     CommonWsChat
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11
                     , aeson
                     , bytestring
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
