name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , array
               , bytestring
               , common
               , containers
               , ghcjs-dom
               , jsaddle
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-route
               , lens
               , modern-uri
               , reflex
               , reflex-dom
               , obelisk-generated-static
               , reflex-dom-echarts
               , random
               , scientific
               , time
               , vector
               , network-uri
               , unordered-containers
               , dependent-sum
               , text
               , universe
  exposed-modules:
    Frontend
    Frontend.FontAwesome
    Frontend.Head
    Frontend.Home
    Frontend.Nav
    Frontend.Examples.BasicToDo.Main
    Frontend.Examples.Chess.Main
    Frontend.Examples.DisplayGameUpdates.Main
    Frontend.Examples.DragAndDrop.Main
    Frontend.Examples.FileReader.Main
    Frontend.Examples.NasaPod.Main
    Frontend.Examples.PegSolitaire.Main
    Frontend.Examples.ScreenKeyboard.Main
    Frontend.Examples.TicTacToe.Main
    Frontend.Examples.ECharts.Main
    Frontend.Examples.ECharts.ExamplesData
    Frontend.Examples.WebSocketChat.Main
    Frontend.Examples.WebSocketEcho.Main
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
