name:                host-examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Host1
                     , Host2
                     , Host3
                     , Host4
                     , Host5
  build-depends:       base          >= 4.8  && < 4.10
                     , mtl           >= 2.2  && < 2.3
                     , transformers  >= 0.5  && < 0.6
                     , dependent-sum >= 0.3  && < 0.4
                     , dependent-map >= 0.2  && < 0.3
                     , ref-tf        >= 0.4  && < 0.5
                     , lens          >= 4.13 && < 4.15
                     , reflex        >= 0.5  && < 0.6
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
