name:                nasapod
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable nasapod
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -rtsopts
  if !arch(wasm32)
    ghc-options: -threaded -with-rtsopts=-N
  -- other-extensions:    
  build-depends:       base
                     -- , common -- we don't need common parts here
                     , text
                     , containers
                     , aeson
                     , ghcjs-dom
                     , reflex
                     , reflex-dom
                     , reflex-dom-core
                     , jsaddle
                     -- , jsaddle-warp
  hs-source-dirs:      src
  default-language:    Haskell2010
