Name:                othello
Version:             0.1.0.0
Synopsis:            othello in reflex-dom
Homepage:            https://github.com/jeffreyrosenbluth/Othello
License:             BSD3
License-file:        LICENSE
Author:              Jeffrey Rosenbluth
Maintainer:          jeffrey.rosenbluth@gmail.com
Copyright:           2015 Jeffrey Rosenbluth
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.10

Extra-Source-Files:  README.md

Data-dir:            .
Data-files:          static/css/*.css,
                     static/images/*.png

-- Library
--   ghc-options:         -Wall -rtsopts -O2
--   exposed-modules:     Game, Types, AI
--   build-depends:       base >= 4.7 && < 4.8,
--                        array >= 0.5,
--                        containers >= 0.5.5.1 && < 0.6
--   hs-source-dirs:      src
--   default-language:    Haskell2010

Executable othello
  ghc-options:         -Wall -rtsopts -O2
  main-is:             Othello.hs
  cpp-options:         -DCABAL
  build-depends:       base,
                       array,
                       split,
                       containers,
                       reflex,
                       reflex-dom,
                       deepseq,
                       transformers
  hs-source-dirs:      src
  other-modules:       Types, Game, AI
  default-language:    Haskell2010
