Name:                othello
Version:             0.1.1.0
Synopsis:            othello in reflex-dom
Homepage:            https://github.com/jeffreyrosenbluth/Othello
License:             BSD3
License-file:        LICENSE
Author:              Jeffrey Rosenbluth
Maintainer:          jeffrey.rosenbluth@gmail.com
Copyright:           2015 Jeffrey Rosenbluth
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.10

Extra-Source-Files:  README.md

Data-dir:            .
Data-files:          static/css/*.css,
                     static/images/*.png

Executable othello
  ghc-options:         -Wall -rtsopts -O2
  if !arch(wasm32)
    ghc-options: -threaded
  main-is:             Othello.hs
  build-depends:       base,
                       array,
                       split,
                       containers,
                       reflex,
                       reflex-dom >= 0.4,
                       deepseq,
                       text,
                       transformers,
                       jsaddle
  hs-source-dirs:      src
  other-modules:       Types, Game, AI
  default-language:    Haskell2010
