Name: peg-solitaire
Version: 0.1
Synopsis: Peg Solitaire
Description: An implementation of Peg Solitaire using the Reflex-DOM functional reactive DOM library
License: BSD3
License-file: LICENSE
Author: Jeffrey Rosenbluth
Maintainer: jeffrey.rosenbluth@gmail.com
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: >=1.2

executable reflex-lottery
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    reflex,
    reflex-dom,
    file-embed,
    array

  other-extensions: TemplateHaskell
  ghc-prof-options: -fprof-auto
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
