name:                wschat2
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wschat2
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11
                     , commonwschat2
                     , aeson
                     , bytestring
                     , containers
                     , text
                     , ghcjs-dom
                     , reflex
                     , reflex-dom
                     , reflex-dom-core
                     , jsaddle
                     -- , jsaddle-dom
                     -- , jsaddle-warp
  hs-source-dirs:      src
  default-language:    Haskell2010
