name: reflex-examples-chat-client
version: 0.1
description: Simple chat client
license: BSD3
author: Ryan Trinkle
maintainer: ryan.trinkle@gmail.com
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  build-depends:
    base,
    reflex-examples-chat-common,
    aeson,
    bytestring,
    containers,
    ghcjs-dom,
    lens,
    random,
    raw-strings-qq,
    reflex-dom,
    text,
    time,
    transformers
  exposed-modules:
    Client

executable client
  main-is: src/Main.hs
  build-depends:
    base,
    reflex-examples-chat-client
