name: reflex-examples-chat-common
version: 0.1
description: Simple chat common library
license: BSD3
author: Ryan Trinkle
maintainer: ryan.trinkle@gmail.com
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: src
  build-depends:
    base,
    aeson,
    bytestring,
    ghcjs-dom,
    lens,
    reflex-dom,
    text,
    time,
    transformers
  exposed-modules:
    Common.Api
