name: reflex-examples-chat-server
version: 0.1
description: Simple chat server
license: BSD3
author: Ryan Trinkle
maintainer: ryan.trinkle@gmail.com
build-type: Simple
cabal-version: >=1.2

executable server
  main-is: src/Main.hs
  build-depends:
    base,
    snap,
    websockets-snap,
    lens,
    aeson
