name:                commonwschat2
version:             0.1.0.1
build-type:          Simple
cabal-version:       >=1.24

library
  ghc-options:         -Wall -O2
  exposed-modules:     CommonWsChat
  -- other-extensions:    
  build-depends:       base
                     , aeson
                     , bytestring
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
