name:                tictactoe-backend
version:             0.1.0.0
license-file:        LICENSE
author:              Ryan Trinkle
maintainer:          ryan.trinkle@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable tictactoe-backend
  main-is:             Main.hs
  build-depends: base >=4.8 && <4.9
               , snap
               , websockets-snap
  hs-source-dirs:      src
  default-language:    Haskell2010
